--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+burn = { version = "0.16.0", features = ["wgpu", "train"] }
+burn-ndarray = "0.16.0"
+rand = "0.9.0"
+rgb = "0.8.50"
+textplots = "0.8.6"
